--- a/install_docker.yml
+++ b/install_docker.yml
@@ -11,6 +11,7 @@
       get_url:
         url: https://download.docker.com/linux/centos/docker-ce.repo
         dest: /etc/yum.repos.d/docer-ce.repo
+      tags: docker
 
     - name: Enable Docker Edge repo
       ini_file:
@@ -18,18 +19,31 @@
         section: 'docker-ce-edge'
         option: enabled
         value: 0
+      tags: docker
 
     - name: Install Docker
       package:
         name: docker-ce
         state: latest
+      tags: docker
 
     - name: Start Docker service
       service:
          name: docker
          state: started
          enabled: yes
+      tags: docker
 
     - name: Install Docker Module for Python
       pip:
         name: docker
+      tags: docker
+      
+    - name: Set active zone
+      firewalld:
+        zone: trusted
+        interface: eth0
+        state: enabled
+        immediate: yes
+        permanent: true
+      tags: firewall
